fix typos, remove GC defaults